# UC2-Drive-Expert

./: .gitignore  CHANGELOG_MANAGER.md  IMPLEMENTATION_SUMMARY.md  README.md  app.js  assign-agency.js  assign-vehicle-creator.js  assign-vehicle-to-conversations.js  check-agency-users.js  check-agent-agency.js  check-client.js  check-conversations.js  check-manager.js  check-user-agency.js  check-user.js  cleanup-conversations.js  client_debug.txt  contract_debug.txt  db-inspect.js  debug-client-agency.js  debug-missing-client.js  debug-save-vehicle-api.js  debug-test-user.js  debug-user-conversations.js  debug.js  debug_db.js  debug_users.js  delete-agent-client.js  find-vehicles.js  fix-conversations.js  fix-john-client.js  fix-missing-client-assignment.js  fix-test-client.js  import-vehicles.js  inspect-client.js  inspect-user.js  jest.config.js  list-agencies.js  nego_debug.txt  nego_debug_2.txt  (+23 more)
capgemini_ai_service/: .env.example  .gitignore  Dockerfile  Makefile  README.md  demo_ui.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  start_server.bat
capgemini_ai_service/.github/workflows/: ci.yml
capgemini_ai_service/agents/: __init__.py  deal_agent.py  inventory_agent.py  negotiation_agent_legacy.py  orchestrator_agent.py  profiling_agent_legacy.py  strategies.py  valuation_agent.py
capgemini_ai_service/agents/negotiation/: __init__.py  agent.py  analysis.py  comparison.py  concession.py  language.py  response.py  state.py
capgemini_ai_service/agents/profiling/: __init__.py  agent.py  prompts.py
capgemini_ai_service/config/: settings.py
capgemini_ai_service/core/: logger.py  metrics.py  repositories.py  session_store.py
capgemini_ai_service/core/services/: market_pricing.py
capgemini_ai_service/data/: inventory.json
capgemini_ai_service/schemas/: __init__.py  models.py  types.py
capgemini_ai_service/src/: __init__.py
capgemini_ai_service/src/domain/negotiation/: __init__.py  entities.py  rules.py  service.py
capgemini_ai_service/src/domain/orchestration/: __init__.py  flow.py
capgemini_ai_service/src/domain/shared/: __init__.py  metrics.py  types.py
capgemini_ai_service/src/domain/valuation/: __init__.py  service.py
capgemini_ai_service/src/infrastructure/llm/: __init__.py  base.py  groq_adapter.py
capgemini_ai_service/src/interfaces/: __init__.py
capgemini_ai_service/tests/: conftest.py  test_ai_agents.py  test_api_scenarios.py  test_inventory.py  test_negotiate_context_fixed.py  test_negotiate_debug.py  test_negotiation.py  test_orchestrator.py  test_orchestrator_fake.py  test_persistence_bug.py  test_profiling.py  test_valuation.py  test_valuation_api.py
capgemini_ai_service/tests/json_tests/: test_accept.json  test_accept_fr.json  test_arabic.json  test_darija.json  test_english.json  test_request.json  test_request2.json  test_turn1.json  test_turn2.json  test_turn3.json
config/: swagger.js
(+143 files in other folders)
